<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".JournalActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        android:background="@color/background"
        android:orientation="horizontal"
        android:padding="4dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:contentDescription="@string/avatar"
            app:srcCompat="@mipmap/ic_launcher" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_lastname"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/txt_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_firstname"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/txt_fathername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_fathername"
                android:textAlignment="center" />
        </LinearLayout>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_marks"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/list_mark_item" />

</LinearLayout>